# auto_tests

./: CMakeLists.txt  CustomTestListener.h  README.md  StatusBarListener.cpp  StatusBarListener.h  csv_test_event_listener.h  general_tests.cpp  general_tests.h  generate_tests.py  generated_tests.cpp  helper.cpp  helper.h  json_test_event_listener.h  merlin_enums.json  merlin_generated_tests.cpp  merlin_generated_tests.h  merlin_print_enums.cpp  merlin_print_enums.h  merlin_sdk.json  module_parameters.json  sdk_sample_raw_frames.cpp  settings.cpp  test.sh  update_tests_flag.cpp  update_tests_flag.h
docs/: PipelineInterface.h  module_parameters.html
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration-members.html  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration.html  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration.js  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration_1_1Normalization-members.html  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration_1_1Normalization.html  classsightx_1_1sdk_1_1CefMetadataRendererStartStreamConfiguration_1_1Normalization.js  classsightx_1_1sdk_1_1CefMetadataRendererUpdateStreamConfiguration-members.html  classsightx_1_1sdk_1_1CefMetadataRendererUpdateStreamConfiguration.html  (+399 more)
docs/doxygen/html/search/: all_0.js  all_1.js  (+124 more)
latency/: CMakeLists.txt  sdk_sample_raw_frames.cpp
reports/: test_cases.json  test_results.json  xml_to_json.py
sot/: sdk_sample_raw_frames.cpp
tests/: sdk_tester.cpp
